syntax = "proto3";

// Note that currently, we are only using the User message
//  and only name field  
// To compile
//protoc --python_out=. messaging-app.proto

message LoginRequest {
    string username =1;
    bytes A = 2;
}

message LoginReply {
    bytes s = 1;
    bytes u = 2;
    bytes B = 3;
    bytes c1 = 4;
}

message KeyConfirm {
    bytes c1_encrypted = 1;
    bytes c2 = 2;
    bytes nonce =3;
}

message KeyReply {
    bytes c2_encrypted = 1;
    bytes nonce =2;
}

message RegisterUser {
    string username = 1;
    string IP_Address = 2;
    int32 port = 3;
    bytes PublicKey = 4;
}

message ListRequest {
    string username = 1;
}

message ListReply{
    bytes Users = 1;
}

message EstablishKeyRequest{
    bytes contrib_a = 1;
    string username = 2;
    bytes signature = 3;
}

message EstablishKeyReply{
    bytes contrib_b = 1;
    string username = 2;
    bytes signature = 3;
    bytes c1 = 4;
}

message Message{
    string username = 1;
    bytes encrypted_message = 2;
    bytes nonce = 3;
}

message Logout{
    string username = 1;
}